test/classes/initializers/errors/lhsInitRhsCons.good
lhsInitRhsCons.chpl:18: error: type mismatch in assignment from unmanaged hasConstruct to unmanaged hasInit
